--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -682,18 +682,6 @@ video {
   top: 100%;
 }
 
-.top-6{
-  top: 1.5rem;
-}
-
-.-top-8{
-  top: -2rem;
-}
-
-.-top-5{
-  top: -1.25rem;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -1218,11 +1206,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgb(33 43 54 / var(--tw-border-opacity));
-}
-
 .border-opacity-20{
   --tw-border-opacity: 0.2;
 }
@@ -1303,6 +1286,11 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-20{
