--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1039,6 +1039,10 @@ video {
   max-width: 28rem;
 }
 
+.max-w-\[800px\]{
+  max-width: 800px;
+}
+
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
