--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -682,6 +682,10 @@ video {
   top: 100%;
 }
 
+.top-10{
+  top: 2.5rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -745,6 +749,31 @@ video {
 .my-\[6px\]{
   margin-top: 6px;
   margin-bottom: 6px;
+}
+
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-20{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.my-40{
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+
+.my-36{
+  margin-top: 9rem;
+  margin-bottom: 9rem;
 }
 
 .mb-0{
@@ -855,6 +884,42 @@ video {
   margin-top: 6px;
 }
 
+.mt-auto{
+  margin-top: auto;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-\[500px\]{
+  margin-top: 500px;
+}
+
+.mt-\[100px\]{
+  margin-top: 100px;
+}
+
+.mt-32{
+  margin-top: 8rem;
+}
+
+.mt-40{
+  margin-top: 10rem;
+}
+
+.mt-56{
+  margin-top: 14rem;
+}
+
+.mt-64{
+  margin-top: 16rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .block{
   display: block;
 }
@@ -925,6 +990,10 @@ video {
 
 .h-full{
   height: 100%;
+}
+
+.h-screen{
+  height: 100vh;
 }
 
 .w-10{
@@ -1079,8 +1148,16 @@ video {
   resize: both;
 }
 
+.flex-row{
+  flex-direction: row;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
+}
+
+.content-center{
+  align-content: center;
 }
 
 .items-end{
@@ -1103,12 +1180,36 @@ video {
   justify-content: space-between;
 }
 
+.place-self-center{
+  place-self: center;
+}
+
+.self-auto{
+  align-self: auto;
+}
+
+.self-end{
+  align-self: flex-end;
+}
+
+.self-center{
+  align-self: center;
+}
+
+.self-stretch{
+  align-self: stretch;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .scroll-smooth{
   scroll-behavior: smooth;
+}
+
+.text-ellipsis{
+  text-overflow: ellipsis;
 }
 
 .rounded{
@@ -1459,6 +1560,11 @@ video {
   padding-bottom: 6px;
 }
 
+.px-14{
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
 .pb-10{
   padding-bottom: 2.5rem;
 }
@@ -1503,12 +1609,20 @@ video {
   padding-top: 5rem;
 }
 
+.pt-\[100px\]{
+  padding-top: 100px;
+}
+
 .pt-\[120px\]{
   padding-top: 120px;
 }
 
-.pt-\[80px\]{
-  padding-top: 80px;
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-\[1000px\]{
+  padding-top: 1000px;
 }
 
 .text-left{
@@ -1517,6 +1631,10 @@ video {
 
 .text-center{
   text-align: center;
+}
+
+.align-middle{
+  vertical-align: middle;
 }
 
 .text-2xl{
@@ -1589,6 +1707,10 @@ video {
 
 .font-semibold{
   font-weight: 600;
+}
+
+.font-extrabold{
+  font-weight: 800;
 }
 
 .uppercase{
@@ -2260,6 +2382,14 @@ body {
     line-height: 1.75rem;
   }
 
+  .md\:text-\[20px\]{
+    font-size: 20px;
+  }
+
+  .md\:text-\[30px\]{
+    font-size: 30px;
+  }
+
   .md\:leading-relaxed{
     line-height: 1.625;
   }
@@ -2508,6 +2638,10 @@ body {
 
   .lg\:pr-4{
     padding-right: 1rem;
+  }
+
+  .lg\:pt-\[100px\]{
+    padding-top: 100px;
   }
 
   .lg\:pt-\[120px\]{
