--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -771,8 +771,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-20{
+  margin-bottom: 5rem;
+}
+
 .mb-3{
   margin-bottom: 0.75rem;
+}
+
+.mb-32{
+  margin-bottom: 8rem;
 }
 
 .mb-4{
@@ -859,20 +867,16 @@ video {
   margin-top: 6px;
 }
 
-.mb-\[1000px\]{
-  margin-bottom: 1000px;
+.mt-2\.5{
+  margin-top: 0.625rem;
 }
 
-.mb-\[100px\]{
-  margin-bottom: 100px;
+.mt-5{
+  margin-top: 1.25rem;
 }
 
-.mb-20{
-  margin-bottom: 5rem;
-}
-
-.mb-32{
-  margin-bottom: 8rem;
+.mb-2\.5{
+  margin-bottom: 0.625rem;
 }
 
 .block{
@@ -1131,14 +1135,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around{
-  justify-content: space-around;
-}
-
-.justify-evenly{
-  justify-content: space-evenly;
-}
-
 .justify-self-center{
   justify-self: center;
 }
@@ -1330,11 +1326,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#000\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-20{
@@ -1622,6 +1613,15 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[30px\]{
+  font-size: 30px;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold{
@@ -2351,6 +2351,10 @@ body {
     margin-bottom: 0px;
   }
 
+  .lg\:mb-10{
+    margin-bottom: 2.5rem;
+  }
+
   .lg\:mb-11{
     margin-bottom: 2.75rem;
   }
@@ -2391,16 +2395,24 @@ body {
     margin-top: 60px;
   }
 
-  .lg\:mb-1{
-    margin-bottom: 0.25rem;
+  .lg\:mb-\[50px\]{
+    margin-bottom: 50px;
   }
 
-  .lg\:mb-10{
-    margin-bottom: 2.5rem;
+  .lg\:mb-\[100px\]{
+    margin-bottom: 100px;
   }
 
-  .lg\:mb-56{
-    margin-bottom: 14rem;
+  .lg\:mb-\[1200px\]{
+    margin-bottom: 1200px;
+  }
+
+  .lg\:mb-\[120px\]{
+    margin-bottom: 120px;
+  }
+
+  .lg\:mb-\[130px\]{
+    margin-bottom: 130px;
   }
 
   .lg\:block{
@@ -2469,34 +2481,6 @@ body {
 
   .lg\:w-full{
     width: 100%;
-  }
-
-  .lg\:w-2\/4{
-    width: 50%;
-  }
-
-  .lg\:w-auto{
-    width: auto;
-  }
-
-  .lg\:w-2\/3{
-    width: 66.666667%;
-  }
-
-  .lg\:w-1\/5{
-    width: 20%;
-  }
-
-  .lg\:w-3\/5{
-    width: 60%;
-  }
-
-  .lg\:w-2\/5{
-    width: 40%;
-  }
-
-  .lg\:w-4\/6{
-    width: 66.666667%;
   }
 
   .lg\:max-w-\[565px\]{
